<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextApe1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ape1"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextApe2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ape2"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextTelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/num_telf2"
                android:inputType="number"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextPass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passReg"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/editTextPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passReg2"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="269dp"
                    android:layout_height="37dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonRegistro2"
                    android:layout_width="288dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/confirmarReg" />

                <Space
                    android:layout_width="269dp"
                    android:layout_height="37dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>