<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250sp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bordes_redondos"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCitasCard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/citaCard"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textViewFechaCard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/mostrarFechaCard"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewHoraCard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/mostrarHoraCard"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonModifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#80114A"
                android:text="@string/modificarCita"
                android:textAllCaps="false"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonDelet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#80114A"
                android:text="@string/eliminarCita"
                android:textAllCaps="false"
                app:cornerRadius="10dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>