<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondos"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCitasCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/citaCard"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textViewServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="16sp"
            android:text="@string/mostrarServicio" />

        <TextView
            android:id="@+id/textViewFechaCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/mostrarFechaCard"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewHoraCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/mostrarHoraCard"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic" />


    </LinearLayout>

</androidx.cardview.widget.CardView>